Hardcode grid gap and border to prevent (slightly) differently sized gaps on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -38,9 +38,9 @@ body {
 #grid {
   position: relative;
   max-height: 800px;
-  border: 0.05em solid black;
+  border-left: 1px solid black;
+  border-top: 1px solid black;
   background-color: black;
-  gap: 0.05em;
   font-size: 4em;
 }
 
@@ -72,6 +72,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .white {
